--- a/narrative.html
+++ b/narrative.html
@@ -8,6 +8,28 @@
 <p id="world-emissions">World CO2 Emissions: </p>
 <p id="world-gdp">World GDP: </p>
 <div id="plot"></div>
+<div id="country-filters" style="display:flex;margin-bottom:10px;">
+  <div>
+    <input type="checkbox" id="americas-filter">
+    <label>Americas</label>
+  </div>
+  <div>
+    <input type="checkbox" id="asia-filter">
+    <label>Asia</label>
+  </div>
+  <div>
+    <input type="checkbox" id="africa-filter">
+    <label>Africa</label>
+  </div>
+  <div>
+    <input type="checkbox" id="europe-filter">
+    <label>Europe</label>
+  </div>
+  <div>
+    <input type="checkbox" id="oceania-filter">
+    <label>Oceania</label>
+  </div>
+</div>
 <div id="btn_container">
   <button id="back_btn">Back</button>
   <button id="forward_btn">Forward</button>
@@ -44,18 +66,18 @@ async function fetchData() {
       let code = e[1]["Country Code"];
       let continent = continents_data[code];
       if (typeof(continent) == "undefined" && e[1]["Country Name"] != "World") return;
-      console.log(continent);
       joined.push( {"country" : e[0], "co2" : e[1], "gdp" : gdp_dats[e[0]], "continent": continent} );
     }
   });
   return joined;
 }
 
-function filterByYear(data, year) {
+function filterData(data, year, continents) {
   i = year - 1960;
   res = [];
   Object.entries(data).forEach(country => {
-    if (country[1].co2[year] == "" || country[1].gdp[year] == "")
+    console.log(country[1].continent);
+    if (country[1].co2[year] == "" || country[1].gdp[year] == "" || (continents.find((e) => e == country[1].continent) == undefined))
       return;
     res.push([ country[1].country, parseFloat(country[1].gdp[year]), parseFloat(country[1].co2[year]), country[1].continent ]);
   });
@@ -86,7 +108,6 @@ function drawGraph(data) {
     .range([ height, 0]);
   svg.append("g")
     .call(d3.axisLeft(y));
-
 
   // axis label code taken from https://stackoverflow.com/questions/11189284/d3-axis-labeling
   svg.append("text")
@@ -137,9 +158,24 @@ function drawGraph(data) {
       });
 }
 
+function continentsVectorFromBoxes() {
+  let res = [];
+  if (document.getElementById("americas-filter").checked) res.push("Americas");
+  if (document.getElementById("asia-filter").checked) res.push("Asia");
+  if (document.getElementById("africa-filter").checked) res.push("Africa");
+  if (document.getElementById("europe-filter").checked) res.push("Europe");
+  if (document.getElementById("oceania-filter").checked) res.push("Oceania");
+  return res;
+}
+
 async  function init() {
   var data = await fetchData();
-  let start_data = filterByYear(data, 1990);
+  document.getElementById("americas-filter").checked = "true";
+  document.getElementById("asia-filter").checked = "true";
+  document.getElementById("africa-filter").checked = "true";
+  document.getElementById("europe-filter").checked = "true";
+  document.getElementById("oceania-filter").checked = "true";
+  let start_data = filterData(data, 1990, continentsVectorFromBoxes());
   drawGraph(start_data);
   return data;
 }
@@ -148,7 +184,7 @@ function advanceGraph() {
   year = year >= 2019 ? 2019 : year+1;
   document.getElementById("year-label").innerHTML = "Year: "+year;
   document.getElementById("message").innerHTML = messageFromYear(year);
-  let year_data = filterByYear(d, year);
+  let year_data = filterData(d, year, continentsVectorFromBoxes());
   document.getElementById("plot").innerHTML = "";
   drawGraph(year_data);
 }
@@ -157,7 +193,7 @@ function rewindGraph() {
   year = year <= 1990 ? 1990 : year-1;
   document.getElementById("year-label").innerHTML = "Year: "+year;
   document.getElementById("message").innerHTML = messageFromYear(year);
-  let year_data = filterByYear(d, year);
+  let year_data = filterData(d, year, continentsVectorFromBoxes());
   document.getElementById("plot").innerHTML = "";
   drawGraph(year_data);
 }
@@ -169,6 +205,12 @@ function messageFromYear(year) {
   else return messages[3];
 }
 
+function reDrawPlot() {
+  let year_data = filterData(d, year, continentsVectorFromBoxes());
+  document.getElementById("plot").innerHTML = "";
+  drawGraph(year_data); 
+}
+
 var d;
 init().then(v => {
   d = v;
@@ -178,6 +220,13 @@ var messages = ["The plot begins fairly dense with a strong positive correlation
 	"The correlation is still strongly positive but the spread has grown wider, especially among outliers.",
 	"Global GDP per capita has risen ~12.6% while global CO2 Emissions have doubled.",
 	"Global GDP per capita has stayed relatively stagnant since 2007 but global CO2 emissions have risen ~30.5%. The line of best fit has flattened quite a bit since 1990."];
+
+document.getElementById("americas-filter").addEventListener("change", reDrawPlot);
+document.getElementById("asia-filter").addEventListener("change", reDrawPlot);
+document.getElementById("africa-filter").addEventListener("change", reDrawPlot);
+document.getElementById("europe-filter").addEventListener("change", reDrawPlot);
+document.getElementById("oceania-filter").addEventListener("change", reDrawPlot);
+
 document.getElementById("forward_btn").addEventListener("click", advanceGraph);
 document.getElementById("back_btn").addEventListener("click", rewindGraph);
 
