specify world GDP is per capita

--- a/narrative.html
+++ b/narrative.html
@@ -13,7 +13,7 @@
 <h2>CO2 emissions (metric tons per capita) as a function of GDP per capita (current US Dollars)</h2>
 <h3 id="year-label">Year: 1990</h3>
 <p id="world-emissions">World CO2 Emissions: </p>
-<p id="world-gdp">World GDP: </p>
+<p id="world-gdp">World GDP per capita: </p>
 <div id="plot"></div>
 <div id="country-filters" style="display:flex;margin-bottom:10px;">
   <div>
