only tab container wraps

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 
 .center-container {
  display:flex;
+ justify-content:center;
+ align-items:center;
+}
+
+.tab-container {
+ display:flex;
  flex-wrap: wrap;
  justify-content:center;
  align-items:center;
@@ -40,11 +46,11 @@
     <p>I'm interested in roles like: Computational Linguist/NLP Engineer, Software Developer, Data/Business Analyst</p>
    </center>
    
-   <div class="center-container">
-    <h2 class="tab-select" id="data-viz-tab">Data Viz</h2>
-    <h2 class="tab-select" id="education-tab">Education</h2>
-    <h2 class="tab-select" id="work-history-tab">Work History</h2>
-    <h2 class="tab-select" id="software-tab">Software Projects</h2>
+   <div class="tab-container">
+    <h1 class="tab-select" id="data-viz-tab">Data Viz</h1>
+    <h1 class="tab-select" id="education-tab">Education</h1>
+    <h1 class="tab-select" id="work-history-tab">Work History</h1>
+    <h1 class="tab-select" id="software-tab">Software Projects</h1>
    </div>
 
    <div id="content-div">
