--- a/index.html
+++ b/index.html
@@ -110,9 +110,10 @@
       <p class="job-company">University of Illinois at Urbana-Champaign Computer Science</p> \
       <p class="job-dates">January 2022 - Present</p> \
       <ul> \
-       <li>Helped instruct lab sessions</li> \
+       <li>Desgigned and developed interactive online programming homeworks for students</li> \
+       <li>Assisted lab instruction</li> \
        <li>Tutored students in office hours</li> \
-       <li>Fixed bugs in our online course infrastructure</li> \
+       <li>Fixed bugs in our online course office hours web app</li> \
       </ul> \
     </div> \
     <div> \
@@ -150,7 +151,7 @@
 
     let projects = [
       {"name" : "Restaurant Recommender", "image" : "cs411-proj1.jpg", "description" : "Users can input their eating tendencies and preferences to get restaurant/bar recommendations generated via neural collaborative filtering.<br><a>Source Code</a>"},
-      {"name" : "Simpla Vendejo", "image" : "simpla-vendejo2.jpg", "description" : 'A simple e-commerce platform for managing payments with the Monero cryptocurrency.<br><a>API Source Code</a><br><a>Frontend Source Code</a>'},
+      {"name" : "Simpla Vendejo", "image" : "simpla-vendejo2.jpg", "description" : 'A simple e-commerce platform for managing payments with the Monero cryptocurrency.<br><a href="https://github.com/benevanoff/Simpla-Vendejo-API">API Source Code</a><br><a href="https://github.com/benevanoff/Simpla-Vendejo-Demo">Frontend Source Code</a>'},
       {"name" : "Forest Forever", "image" : "forest-forever.png", "description" : 'A 2D video game where the player must survive a forest filled with mean squirrels and a bear!<br><a href="https://github.com/benevanoff/ForestForever">Source Code</a>'}
     ];
     let title = document.getElementById("software-name");
