add restaurant recommender link

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     </center>';
 
     let projects = [
-      {"name" : "Restaurant Recommender", "image" : "cs411-proj1.jpg", "description" : "Users can input their eating tendencies and preferences to get restaurant/bar recommendations generated via neural collaborative filtering.<br><a>Source Code</a>"},
+      {"name" : "Restaurant Recommender", "image" : "cs411-proj1.jpg", "description" : 'Users can input their eating tendencies and preferences to get restaurant/bar recommendations generated via neural collaborative filtering.<br><a href="https://github.com/benevanoff/Restaurant-Recommender-Chicago">Source Code</a>'},
       {"name" : "Simpla Vendejo", "image" : "simpla-vendejo2.jpg", "description" : 'A simple e-commerce platform for managing payments with the Monero cryptocurrency.<br><a href="https://github.com/benevanoff/Simpla-Vendejo-API">API Source Code</a><br><a href="https://github.com/benevanoff/Simpla-Vendejo-Demo">Frontend Source Code</a>'},
       {"name" : "Forest Forever", "image" : "forest-forever.png", "description" : 'A 2D video game where the player must survive a forest filled with mean squirrels and a bear!<br><a href="https://github.com/benevanoff/ForestForever">Source Code</a>'}
     ];
